@@ -6,10 +6,10 @@ import com.korit.board_back.dto.test.ResponseTestDto;
 import com.korit.board_back.entity.Test;
 import com.korit.board_back.repository.TestRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.config.annotation.ObjectPostProcessor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,7 +18,6 @@ public class TestService {
   private final TestRepository testRepository;
 
   public ResponseDto<List<ResponseTestDto>> getTest() {
-
     List<Test> tests;
     try {
       tests = testRepository.findAll();
@@ -27,11 +26,10 @@ public class TestService {
       return ResponseDto.setFailed(ResponseMessage.DATABASE_ERROR);
     }
 
-    // Test → ResponseTestDto 변환
-    List<ResponseTestDto> responseList = tests.stream()
+    List<ResponseTestDto> dtos = tests.stream()
       .map(ResponseTestDto::new)
-      .toList();
+      .collect(Collectors.toList());
 
-    return ResponseDto.setSuccess(ResponseMessage.SUCCESS, responseList);
+    return ResponseDto.setSuccess(ResponseMessage.SUCCESS, dtos);
   }
 }
